--- a/cloud-demo/order-service/src/main/resources/application.yml
+++ b/cloud-demo/order-service/src/main/resources/application.yml
@@ -6,6 +6,14 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: orderServer
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:10086/eureka/
+    #fetch-registry: false  #是否要拉取其他服务的信息，默认是true
+    #register-with-eureka: false
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
