--- a/cloud-demo/order-service/src/main/resources/application.yml
+++ b/cloud-demo/order-service/src/main/resources/application.yml
@@ -23,3 +23,10 @@ logging:
     cn.itcast: debug
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
+userServer:
+  ribbon:
+    NFLoadBalacerRuleClassName: com.netflix.loadbalancer.RandomRule  #负载均衡规律
+ribbon:
+  eager-load:
+    enabled: true
+    clients: userService
