--- a/cloud-demo/user-service/src/main/resources/application.yml
+++ b/cloud-demo/user-service/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   application:
     name: userServer
+  cloud:
+    nacos:
+      server-addr: localhost:8848
+      discovery:
+        cluster-name: SH    #集群HZ
+        namespace: eebfde3b-c5ec-4c6f-8648-36282a9020d7
 eureka:
   client:
     service-url:
